# rust_iso3166

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
scripts/: build-wasm.sh  iso3166_2.data  iso3166_2.py  iso3166_3.data  iso3166_3.py  lib.py  publish.sh
src/: generate.py  iso3166_2.py  iso3166_2.rs  iso3166_3.py  iso3166_3.rs  lib.py  lib.rs  test.py
tests/: test_serde.rs
