[package]
name = "rust_iso3166"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
description="ISO 3166-1 (Codes for the representation of names of countries and their subdivisions – Part 1: Country codes) is a standard defining codes for the names of countries, dependent territories, and special areas of geographical interest. It is the first part of the ISO 3166 standard published by the International Organization for Standardization."
repository="https://github.com/rust-iso/rust_iso3166"
license="Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = ["src/*.py"]
documentation = "https://docs.rs/rust_iso3166/"
keywords=["ISO3166", "ISO3166-1", "ISO3166-2", "ISO3166-3"]

[features]
cli = ["dep:prettytable-rs"]
serde = ["dep:serde"]

[[bin]]
name = "iso3166"
path = "src/bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phf = { version = "^0.14.0", features = ["macros"] }
prettytable-rs = { version = "^0.10", optional = true }
serde = { version = "^1.0.228", optional = true }

[dev-dependencies]
serde_json = { version = "^1.0.150" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2.100"
js-sys = "^0.3.77"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3.50"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(direct_wasm)'] }
